--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,5 @@
     <string name="screen_name">\@%s</string>
     <string name="tweet">Tweet</string>
     <string name="what_s_happening">What\'s happening?</string>
-
+    <string name="char_count">%d/140</string>
 </resources>
